Bug 44143 - [4.6 Regression] -fdump-tree-all for lto does not work as expected
Summary: [4.6 Regression] -fdump-tree-all for lto does not work as expected
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: lto (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Richard Biener
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-14 16:15 UTC by H.J. Lu
Modified: 2010-05-18 15:11 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2010-05-14 16:53:08


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2010-05-14 16:15:44 UTC
PR 41564 came back.
Comment 1 Richard Biener 2010-05-14 16:26:53 UTC
Did it?

> ./xgcc -B. -o t 1.c 2.c -flto -fdump-tree-optimized
> ls t.142t.optimized 1.c.142t.optimized 2.c.142t.optimized 
1.c.142t.optimized  2.c.142t.optimized  t.142t.optimized

or do you mean with -fwhopr?  Yes, there it might have been - but I'd like
to change 4.5 behavior there anyway.
Comment 2 H.J. Lu 2010-05-14 16:32:43 UTC
I saw

[hjl@gnu-26 tmp]$ ls /tmp/cc*.alias        
/tmp/cc0eEl7p.wpa.o.062t.alias  /tmp/cckTN74j.wpa.o.062t.alias
/tmp/cc0fl2Gv.wpa.o.062t.alias  /tmp/ccKxCa48.wpa.o.062t.alias
/tmp/cc0mDjKr.wpa.o.062t.alias  /tmp/ccmBxp4i.wpa.o.062t.alias
/tmp/cc2aQnfZ.wpa.o.062t.alias  /tmp/ccmCGQyk.wpa.o.062t.alias
/tmp/cc44cnPJ.wpa.o.062t.alias  /tmp/ccmeNbWi.wpa.o.062t.alias
/tmp/cc4VTteM.wpa.o.062t.alias  /tmp/ccMf6RhU.wpa.o.062t.alias
/tmp/cc6PRdMg.wpa.o.062t.alias  /tmp/ccMfSIug.wpa.o.062t.alias
/tmp/cc6uMLow.wpa.o.062t.alias  /tmp/ccmhdUhZ.wpa.o.062t.alias
/tmp/cc89Jo9c.wpa.o.062t.alias  /tmp/ccMRx2Rm.wpa.o.062t.alias
/tmp/cc8C0Fnr.wpa.o.062t.alias  /tmp/ccmStWDb.wpa.o.062t.alias
/tmp/cc8IKE3z.wpa.o.062t.alias  /tmp/ccMVFGbe.wpa.o.062t.alias
/tmp/ccA0uYOV.wpa.o.062t.alias  /tmp/ccmZ1YYH.wpa.o.062t.alias
/tmp/ccACidGl.wpa.o.062t.alias  /tmp/cco1kqB2.wpa.o.062t.alias
/tmp/ccaKvd2e.wpa.o.062t.alias  /tmp/ccoalfcL.wpa.o.062t.alias
/tmp/ccaSErpY.wpa.o.062t.alias  /tmp/ccoKBpHd.wpa.o.062t.alias
/tmp/ccAUJRcI.wpa.o.062t.alias  /tmp/ccQ2FPLZ.wpa.o.062t.alias
/tmp/ccAZcsmq.wpa.o.062t.alias  /tmp/ccq3LmLt.wpa.o.062t.alias
/tmp/cccfr7pZ.wpa.o.062t.alias  /tmp/ccqeFc1T.wpa.o.062t.alias
/tmp/ccCkB5aX.wpa.o.062t.alias  /tmp/ccQnJ9tm.wpa.o.062t.alias
/tmp/ccCPo3KN.wpa.o.062t.alias  /tmp/ccs3kFvP.wpa.o.062t.alias
/tmp/cccYRb2r.wpa.o.062t.alias  /tmp/ccs9g6iX.wpa.o.062t.alias
/tmp/cccySTRh.wpa.o.062t.alias  /tmp/ccSCkKGD.wpa.o.062t.alias
/tmp/ccEbBSxV.wpa.o.062t.alias  /tmp/ccSfBmUQ.wpa.o.062t.alias
/tmp/ccEhqkkj.wpa.o.062t.alias  /tmp/ccSR21cA.wpa.o.062t.alias
/tmp/cceMXyCM.wpa.o.062t.alias  /tmp/ccsSDmqA.wpa.o.062t.alias
/tmp/cceOgGZP.wpa.o.062t.alias  /tmp/ccU0Gb3j.wpa.o.062t.alias
/tmp/ccg7uyKt.wpa.o.062t.alias  /tmp/ccUC5eql.wpa.o.062t.alias
/tmp/ccGdMtFc.wpa.o.062t.alias  /tmp/ccuTcS0o.wpa.o.062t.alias
/tmp/ccI8fSXr.wpa.o.062t.alias  /tmp/ccw6QIfF.wpa.o.062t.alias
/tmp/ccircpzK.wpa.o.062t.alias  /tmp/ccWd7clT.wpa.o.062t.alias
/tmp/ccISWkIR.wpa.o.062t.alias  /tmp/ccWg1Bqk.wpa.o.062t.alias
/tmp/ccK1120n.wpa.o.062t.alias  /tmp/ccwIbmdq.wpa.o.062t.alias
/tmp/cck4NFD9.wpa.o.062t.alias  /tmp/ccwIMzla.wpa.o.062t.alias
/tmp/cckBb0IM.wpa.o.062t.alias  /tmp/ccyGlDlq.wpa.o.062t.alias
/tmp/ccKcLaRh.wpa.o.062t.alias  /tmp/ccyMLPcV.wpa.o.062t.alias
/tmp/cckG4BDR.wpa.o.062t.alias  /tmp/ccYO3bBu.wpa.o.062t.alias
[hjl@gnu-26 tmp]$ 
Comment 3 Richard Biener 2010-05-14 16:33:58 UTC
So that's not "-fdump-tree-* do not work as expected" but "testing leaves
temporary files behind"?
Comment 4 H.J. Lu 2010-05-14 16:38:50 UTC
I opened PR 41708, which is closed as a dup for PR 41564.
Comment 5 Richard Biener 2010-05-14 16:53:08 UTC
I'll fix it (again).
Comment 6 Richard Biener 2010-05-14 17:13:15 UTC
Btw, I like to have wpa/ltrans dumps named after the final output file, not
random source files.  That would allow easier adaption of dg-scan-* i think.
Comment 7 Richard Biener 2010-05-18 15:11:24 UTC
Subject: Bug 44143

Author: rguenth
Date: Tue May 18 15:11:01 2010
New Revision: 159536

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=159536
Log:
2010-05-18  Richard Guenther  <rguenther@suse.de>

	PR lto/44143
	* lto-wrapper.c (verbose): New variable.  Initialize from -v.
	(debug): Initialize from -save-temps.
	(collect_execute): Print command-line when verbose.
	(run_gcc): Always use COLLECT_GCC_OPTIONS.  Use fork_execute
	for ltrans invocation.  Produce -dumpbase flag again.
	(process_args): Remove.
	(main): Simplify.
	* collect2.c (maybe_run_lto_and_relink): Only pass object
	files to lto-wrapper.
	* gcc.c (LINK_COMMAND_SPEC): Likewise.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/collect2.c
    trunk/gcc/gcc.c
    trunk/gcc/lto-wrapper.c

Comment 8 Richard Biener 2010-05-18 15:11:41 UTC
Fixed again.